Button size reduction within form builder template

--- a/apollo/frontend/templates/frontend/formbuilder.html
+++ b/apollo/frontend/templates/frontend/formbuilder.html
@@ -22,8 +22,8 @@
         <div fb-components></div>
       </div>
     </div>
-    <button class="btn btn-primary btn-lg" ng-click="submit();"><span class="glyphicon glyphicon-save"></span> Save</button>
-    <a href="{{ url_for('forms.list_forms') }}" class="btn btn-default btn-lg">Cancel</a>
+    <button class="btn btn-primary" ng-click="submit();"><span class="glyphicon glyphicon-save"></span> Save</button>
+    <a href="{{ url_for('forms.list_forms') }}" class="btn btn-default">Cancel</a>
   </div>
 </div>
 </div>
