Form component container adjustment

--- a/apollo/frontend/templates/frontend/formbuilder.html
+++ b/apollo/frontend/templates/frontend/formbuilder.html
@@ -18,7 +18,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Form Components</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body" style="padding-bottom:10em;">
           <div fb-components></div>
         </div>
       </div>
