Updated Message List time series chart

--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -113,4 +113,5 @@
 </script>
 <script src="{{ url_for('static', filename='js/timestamps.js') }}"></script>
 <script src="{{ url_for('static', filename='js/highstock.js') }}"></script>
+<script src="{{ url_for('static', filename='js/exporting.js') }}"></script>
 {% endblock %}
