Left aligned time series title

--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -97,7 +97,8 @@
         },
 
         title : {
-            text : '{% trans %}SMS Flow{% endtrans %}'
+            text : '{% trans %}SMS Flow{% endtrans %}',
+            align: 'left'
         },
 
         series : [{
