refactor and additional support for filtered dashboard statistics by location

--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -43,9 +43,9 @@
 {% if loop.index0 is divisibleby 6 %}<div class="row">{% endif %}
   <div class="col-md-2">
   {%- if group -%}
-    <legend class="centered"><a href="{{ url_for('dashboard.index', group=group, locationtype=locationtype, **args) }}">{{ row.name }}</a></legend>
+    <legend class="centered">{% if next_location %}<a href="{{ url_for('dashboard.index', group=group, locationtype=locationtype, location=row.get('id', ''), **args) }}">{% endif %}{{ row.name }}{% if next_location %}</a>{% endif %}</legend>
   {%- else -%}
-    <legend style="text-align:center"><a href="{{ url_for('dashboard.index', group=row.name, locationtype=locationtype, **args) }}">{{ row.name }}</a></legend>
+    <legend style="text-align:center">{% if not location %}<a href="{{ url_for('dashboard.index', group=row.name, locationtype=locationtype, **args) }}">{% endif %}{{ row.name }}{% if not location %}</a>{% endif %}</legend>
   {% endif %}
     <div class="piechart" data-chart='{{ row|tojson }}'>
     </div>
