1. Multiselect option percentages are now based to the number of reported submissions 2. Rendering of text box for uniselect questions in submission editor

--- a/apollo/frontend/templates/frontend/macros/submission_field_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_field_macros.html
@@ -2,7 +2,7 @@
     {% for value, label, selected in field.iter_choices()|sort %}
     <div class="checkbox">
         <label>
-            <input type="checkbox" value="{{ value }}" {% if selected %}checked{% endif %}> ({{ value|int }}) {{ label }}
+            <input name="{{ field.name }}" type="checkbox" value="{{ value }}" {% if selected %}checked{% endif %}> ({{ value|int }}) {{ label }}
         </label>
     </div>
     {% endfor %}
