fix filtering in locations and i18n

--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -149,6 +149,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/prettify.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap-wizard.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.form.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/filters.js') }}"></script>
 <script type="text/javascript">
 var wizard;
 
