Added trans tag to verification list table headers

--- a/apollo/frontend/templates/frontend/verification_list.html
+++ b/apollo/frontend/templates/frontend/verification_list.html
@@ -11,11 +11,11 @@
 		<table class="table table-condensed table-bordered table-striped table-hovered">
 			<thead>
 				<tr>
-					<th>Logical Checks</th>
-					<th width="200">Missing</th>
-					<th width="200">Flagged</th>
-					<th width="200">Flagged - Clear</th>
-					<th width="200">All fine/Clear</th>
+					<th>{% trans %}Logical Checks{% endtrans %}</th>
+					<th width="200">{% trans %}Missing{% endtrans %}</th>
+					<th width="200">{% trans %}Flagged{% endtrans %}</th>
+					<th width="200">{% trans %}Flagged - Clear{% endtrans %}</th>
+					<th width="200">{% trans %}All fine/Clear{% endtrans %}</th>
 				</tr>
 			</thead>
 			<tbody>
