--- a/apollo/frontend/templates/frontend/form_checks.html
+++ b/apollo/frontend/templates/frontend/form_checks.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row">
 	<div class="col-md-10">
-		<div id="handsontable"></div>
+		<div id="check_builder" data-checks='{{ check_data|tojson}}'></div>
 	</div>
 	<div class="col-md-2">
 		<button class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
@@ -16,7 +16,9 @@
 <script src="{{ url_for('static', filename='js/jquery.handsontable.full.min.js') }}"></script>
 <script>
 	$(document).ready(function() {
-		$('#handsontable').handsontable({
+		var check_data = JSON.parse(document.getElementById('check_builder').dataset.checks);
+		$('#check_builder').handsontable({
+			data: check_data,
 			colHeaders: ['Name', 'LHS', 'Comparator', 'RHS'],
 			columns: [{
 				type: 'text'
