use double quotes for strings as that may affect i18n strings

--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -43,8 +43,8 @@
     parts = message.length <= 160 ? 1 : Math.ceil(message.length / 153);
 
     $('#message').val(message);
-    $('#characters').html(message.length > 1 ? message.length + ' ' + '{% trans %}characters{% endtrans %}' : message.length + ' ' + '{% trans %}character{% endtrans %}');
-    $('#parts').html(parts > 1 ? parts + ' ' + '{% trans %}message parts{% endtrans %}' : parts + ' ' + '{% trans %}message part{% endtrans %}');
+    $('#characters').html(message.length > 1 ? message.length + ' ' + "{% trans %}characters{% endtrans %}" : message.length + ' ' + "{% trans %}character{% endtrans %}");
+    $('#parts').html(parts > 1 ? parts + ' ' + "{% trans %}message parts{% endtrans %}" : parts + ' ' + "{% trans %}message part{% endtrans %}");
   });
 
   $("#send").click(function () {
@@ -67,7 +67,7 @@
         // Reset message textbox, display the status and hide the dialog
         $('#message').val("");
         $('#message').trigger('keyup');
-        $('#alert_message').html('<strong>{% trans %}Success{% endtrans %}!</strong> {% trans %}Your message has been sent{% endtrans %}.');
+        $('#alert_message').html("<strong>{% trans %}Success{% endtrans %}!</strong> {% trans %}Your message has been sent{% endtrans %}.");
         $('#alert').removeClass('alert-error');
         $('#alert').addClass('alert-success');
         $('#alert').fadeIn('fast');
@@ -76,7 +76,7 @@
       })
       .fail(function (){
         // Display the fail message if the request failed
-        $('#alert_message').html('<strong>{% trans %}Error{% endtrans %}!</strong> {% trans %}Please try sending again{% endtrans %}.');
+        $('#alert_message').html("<strong>{% trans %}Error{% endtrans %}!</strong> {% trans %}Please try sending again{% endtrans %}.");
         $('#alert').removeClass('alert-success');
         $('#alert').addClass('alert-error');
         $('#alert').fadeIn('fast');
