display flow chart timing in the local timezone

--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -88,6 +88,12 @@
     // load the data
     var data = $('#container').data('chart');
 
+    Highcharts.setOptions({
+      global: {
+        useUTC: false
+      }
+    });
+
     // Create the chart
     $('#container').highcharts('StockChart', {
         rangeSelector : {
